project description added

--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Project 1: Web Design</h3>
+            <h3>Project 1: Mocrophone enhancer project </h3>
             <p>Description of the first project goes here. This project involves web design elements and layout techniques.</p>
             <a href="#" class="btn">View Project</a>
         </div>
         <div class="project">
-            <h3>Project 2: JavaScript Game</h3>
-            <p>Description of the second project goes here. This project is a simple game built using HTML5 and JavaScript.</p>
+            <h3>Project 2: Car recommendation project </h3>
+            <p>The project explores advanced text analytics using Deep Learning and Natural Language Processing (NLP) to develop a car recommendation engine. This system not only suggests similar car models to users but also provides concise summaries of owner reviews, enhancing user decision-making. Created in a week as part of a bootcamp coursework, the project focuses on extracting valuable insights from large datasets of customer reviews on different car models.
+
+              The necessity for this engine arises from the challenge of manually summarizing extensive unstructured data, which is time-consuming and impractical. By integrating document classification and summarization, the system ensures that the summaries reflect a range of topics that interest users, rather than concentrating on repetitive themes.
+
+              Technically, the project employs a bag-of-words model for initial classification followed by logistic regression for more refined analysis, using tools like NLTK and scikit-learn. The data, segmented into categories such as engines, interiors, and practicality, aids in training the classification model effectively. Sentences classified under these topics are then summarized using state-of-the-art models like BART and Pegasus, the latter preferred for its thematic consistency in summaries.
+
+              Executed on the Google Cloud Platform, this project showcases a robust method of handling and summarizing textual data, which could be adapted to various other domains, demonstrating significant potential beyond its initial automotive focus.</p>
             <a href="#" class="btn">View Project</a>
         </div>
     </section>
@@ -29,4 +35,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
