--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>The solution employs a neural network model that is designed to operate in real time with minimal delay, making it suitable for live applications. The process involves first degrading the quality of a mel-spectrogram to simulate common audio issues, then restoring it using a neural network that acts as an autoencoder. This model is trained on a rich dataset available from Kaggle, ensuring it learns a broad range of audio qualities.</p>
 
             <p>The model's design focuses on simplicity and speed, ensuring that it can process audio quickly enough to function practically in real-time applications without noticeable delays. By focusing on both immediate and slightly historical data, the system can dynamically adjust audio output to maximize clarity and quality. This project not only showcases the potential of AI in improving everyday technology but also sets a benchmark for future enhancements in audio processing technology.</p>
-            <a href="#" class="btn">View Project</a>
+            <a href="https://github.com/RomanZhvanskiy/microphone_enhancer_gh" class="btn">View Project</a>
         </div>
         <div class="project">
             <h3>Project 2: Car recommendation project </h3>
@@ -30,7 +30,7 @@
             <p>Technically, the project employs a bag-of-words model for initial classification followed by logistic regression for more refined analysis, using tools like NLTK and scikit-learn. The data, segmented into categories such as engines, interiors, and practicality, aids in training the classification model effectively. Sentences classified under these topics are then summarized using state-of-the-art models like BART and Pegasus, the latter preferred for its thematic consistency in summaries.</p>
 
             <p>Executed on the Google Cloud Platform, this project showcases a robust method of handling and summarizing textual data, which could be adapted to various other domains, demonstrating significant potential beyond its initial automotive focus.</p>
-            <a href="#" class="btn">View Project</a>
+            <a href="https://github.com/marcnaweb/car_recommendation_engine/tree/add_text_categorization_and_summarization" class="btn">View Project</a>
         </div>
     </section>
     <footer>
