--- a/bak/index.html
+++ b/bak/index.html
@@ -3,37 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> <!-- For icons -->
 </head>
 <body>
     <header>
-        <h1>My Portfolio</h1>
-        <p>Exploring Technology Through Projects</p>
-        <div class="technologies">
-            <i class="fab fa-html5"></i>
-            <i class="fab fa-css3-alt"></i>
-            <i class="fab fa-js-square"></i>
-            <i class="fab fa-react"></i>
-            <i class="fab fa-node-js"></i>
-        </div>
+        <h1>Welcome to My Portfolio</h1>
     </header>
-    <div class="project-container">
-        <div class="Project 1: Microphone enhancer project">
-            <img src="project1.jpg" alt="Project 1 Image">
-            <h3>Project 1: Microphone enhancer project1</h3>
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Project 1: Microphone enhancer project </h3>
             <p>This project aims to significantly enhance the audio quality from microphones, particularly those in wireless headphones, which often fail to capture very high and very low frequencies and can produce noisy or muffled sounds. The core of this project lies in transforming audio into a visual format called a mel-spectrogram, which represents audio frequencies over time with varying intensities. This visual representation is then refined using artificial intelligence to address and correct quality degradations, such as noise addition and frequency drops.</p>
 
             <p>The solution employs a neural network model that is designed to operate in real time with minimal delay, making it suitable for live applications. The process involves first degrading the quality of a mel-spectrogram to simulate common audio issues, then restoring it using a neural network that acts as an autoencoder. This model is trained on a rich dataset available from Kaggle, ensuring it learns a broad range of audio qualities.</p>
 
             <p>The model's design focuses on simplicity and speed, ensuring that it can process audio quickly enough to function practically in real-time applications without noticeable delays. By focusing on both immediate and slightly historical data, the system can dynamically adjust audio output to maximize clarity and quality. This project not only showcases the potential of AI in improving everyday technology but also sets a benchmark for future enhancements in audio processing technology.</p>
             <a href="https://github.com/RomanZhvanskiy/microphone_enhancer_gh" class="btn">View Project</a>
-
         </div>
-        <div class="Project 2: Car recommendation project">
-            <img src="project2.jpg" alt="Project 2 Image">
-            <h3>Project 2: Car recommendation project</h3>
+        <div class="project">
+            <h3>Project 2: Car recommendation project </h3>
             <p>The project explores advanced text analytics using Deep Learning and Natural Language Processing (NLP) to develop a car recommendation engine. This system not only suggests similar car models to users but also provides concise summaries of owner reviews, enhancing user decision-making. Created in a week as part of a bootcamp coursework, the project focuses on extracting valuable insights from large datasets of customer reviews on different car models.</p>
 
             <p>The necessity for this engine arises from the challenge of manually summarizing extensive unstructured data, which is time-consuming and impractical. By integrating document classification and summarization, the system ensures that the summaries reflect a range of topics that interest users, rather than concentrating on repetitive themes.</p>
@@ -41,11 +30,12 @@
             <p>Technically, the project employs a bag-of-words model for initial classification followed by logistic regression for more refined analysis, using tools like NLTK and scikit-learn. The data, segmented into categories such as engines, interiors, and practicality, aids in training the classification model effectively. Sentences classified under these topics are then summarized using state-of-the-art models like BART and Pegasus, the latter preferred for its thematic consistency in summaries.</p>
 
             <p>Executed on the Google Cloud Platform, this project showcases a robust method of handling and summarizing textual data, which could be adapted to various other domains, demonstrating significant potential beyond its initial automotive focus.</p>
-            <a href="https://github.com/marcnaweb/car_recommendation_engine/tree/add_text_categorization_and_summarization" class="btn">View Project</a>        </div>
-        <!-- Add more projects as needed -->
-    </div>
+            <a href="https://github.com/marcnaweb/car_recommendation_engine/tree/add_text_categorization_and_summarization" class="btn">View Project</a>
+        </div>
+    </section>
     <footer>
-        © 2024 by Roman Zhvanskiy. Proudly created with GitHub Pages.
+        <p>Contact me at <a href="mailto:rz03@outlook.com">rz03@outlook.com</a></p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
