--- a/index.html
+++ b/index.html
@@ -11,13 +11,49 @@
     <header>
         <h1>My Portfolio</h1>
         <p>Exploring Technology Through Projects</p>
-        <div class="technologies">
-            <i class="fab fa-html5"></i>
-            <i class="fab fa-css3-alt"></i>
-            <i class="fab fa-js-square"></i>
-            <i class="fab fa-react"></i>
-            <i class="fab fa-node-js"></i>
-        </div>
+<div class="technologies">
+    <!-- Python -->
+    <i class="fab fa-python"></i> Python
+
+    <!-- Jupyter -->
+    <i class="fas fa-book"></i> Jupyter
+
+    <!-- Pandas -->
+    <i class="fas fa-database"></i> Pandas
+
+    <!-- NumPy -->
+    <i class="fas fa-calculator"></i> NumPy
+
+    <!-- Scikit-learn -->
+    <i class="fas fa-brain"></i> Scikit-learn
+
+    <!-- TensorFlow/Keras -->
+    <i class="fas fa-robot"></i> TensorFlow/Keras
+
+    <!-- Neural Networks -->
+    <i class="fas fa-network-wired"></i> Neural Networks
+
+    <!-- Linear Regression -->
+    <i class="fas fa-chart-line"></i> Linear Regression
+
+    <!-- Decision Trees -->
+    <i class="fas fa-tree"></i> Decision Trees
+
+    <!-- Clustering -->
+    <i class="fas fa-object-group"></i> Clustering
+
+    <!-- Regression Analysis -->
+    <i class="fas fa-chart-bar"></i> Regression Analysis
+
+    <!-- Matplotlib -->
+    <i class="fas fa-chart-area"></i> Matplotlib
+
+    <!-- Seaborn -->
+    <i class="fas fa-chart-pie"></i> Seaborn
+
+    <!-- Power BI -->
+    <i class="fas fa-chart-bar"></i> Power BI
+</div>
     </header>
     <div class="project-container">
         <div class="Project 1: Microphone enhancer project">
