--- a/index.html
+++ b/index.html
@@ -12,47 +12,34 @@
         <h1>My Portfolio</h1>
         <p>Exploring Technology Through Projects</p>
 <div class="technologies">
-    <!-- Python -->
-    <i class="fab fa-python"></i> Python
+    <!-- Data Analysis -->
+    <div class="technology-group">
+        <strong>Data Analysis:</strong>
+        <i class="fab fa-python"></i> Python
+        <i class="fas fa-book"></i> Jupyter
+        <i class="fas fa-database"></i> Pandas
+        <i class="fas fa-calculator"></i> NumPy
+    </div>
 
-    <!-- Jupyter -->
-    <i class="fas fa-book"></i> Jupyter
+    <!-- Machine Learning -->
+    <div class="technology-group">
+        <strong>Machine Learning:</strong>
+        <i class="fas fa-brain"></i> Scikit-learn
+        <i class="fas fa-robot"></i> TensorFlow/Keras
+        <i class="fas fa-network-wired"></i> Neural Networks
+        <i class="fas fa-chart-line"></i> Linear Regression
+        <i class="fas fa-tree"></i> Decision Trees
+        <i class="fas fa-object-group"></i> Clustering
+        <i class="fas fa-chart-bar"></i> Regression Analysis
+    </div>
 
-    <!-- Pandas -->
-    <i class="fas fa-database"></i> Pandas
-
-    <!-- NumPy -->
-    <i class="fas fa-calculator"></i> NumPy
-
-    <!-- Scikit-learn -->
-    <i class="fas fa-brain"></i> Scikit-learn
-
-    <!-- TensorFlow/Keras -->
-    <i class="fas fa-robot"></i> TensorFlow/Keras
-
-    <!-- Neural Networks -->
-    <i class="fas fa-network-wired"></i> Neural Networks
-
-    <!-- Linear Regression -->
-    <i class="fas fa-chart-line"></i> Linear Regression
-
-    <!-- Decision Trees -->
-    <i class="fas fa-tree"></i> Decision Trees
-
-    <!-- Clustering -->
-    <i class="fas fa-object-group"></i> Clustering
-
-    <!-- Regression Analysis -->
-    <i class="fas fa-chart-bar"></i> Regression Analysis
-
-    <!-- Matplotlib -->
-    <i class="fas fa-chart-area"></i> Matplotlib
-
-    <!-- Seaborn -->
-    <i class="fas fa-chart-pie"></i> Seaborn
-
-    <!-- Power BI -->
-    <i class="fas fa-chart-bar"></i> Power BI
+    <!-- Data Visualization -->
+    <div class="technology-group">
+        <strong>Data Visualization:</strong>
+        <i class="fas fa-chart-area"></i> Matplotlib
+        <i class="fas fa-chart-pie"></i> Seaborn
+        <i class="fas fa-chart-bar"></i> Power BI
+    </div>
 </div>
     </header>
     <div class="project-container">
