--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <header>
         <h1>My Portfolio</h1>
-        <p>Exploring Technology Through Projects</p>
-<div class="technologies">
+<p class="justified-text">
+I have more than 10 years of experience in Python programming and 2 years in machine learning. My background includes experience in Computational Fluid Dynamics (CFD) and quantitative disciplines.
+</p>
+        <div class="technologies">
     <!-- Data Analysis -->
     <div class="technology-group">
         <strong>Data Analysis:</strong>
